# sppd-cli

./: .gitignore  Cargo.toml  PR_DESCRIPTION.md  README-es-ES.md  README.md  cliff.toml
.github/workflows/: ci.yml  docs.yml  tag-and-release.yml
src/: cli.rs  config.rs  constants.rs  converter.rs  downloader.rs  errors.rs  extractor.rs  lib.rs  main.rs  models.rs  parser.rs  ui.rs  utils.rs
src/downloader/: file_downloader.rs  link_fetcher.rs  mod.rs  period_filter.rs
src/parser/: cleanup.rs  contract_folder_status.rs  file_finder.rs  mod.rs  parquet_writer.rs  scope.rs  xml_parser.rs
tests/: config_test.rs  extractor_test.rs  parser_test.rs
tests/common/: mod.rs
tests/integration/: extractor_test.rs  parser_test.rs
