[package]
name = "sppd-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for fetching and managing data from public tenders and minor contracts in Spain"
authors = ["Alvaro Carranza <alvarocarranzacarrion@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alvaro2c/sppd-cli"
keywords = ["cli", "procurement", "spain", "public-tenders", "data-download", "scraping"]
categories = ["command-line-utilities", "data-processing"]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std", "unicode", "wrap_help"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
scraper = "0.12"
url = "2"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "0.6", default-features = false }

[dev-dependencies]
tempfile = "3"
