[package]
name = "sppd-cli"
version = "0.9.0"
edition = "2021"
description = "A command-line tool for fetching and managing data from public tenders and minor contracts in Spain"
authors = ["Alvaro Carranza <alvarocarranzacarrion@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alvaro2c/sppd-cli"
keywords = ["cli", "procurement", "spain", "public-tenders", "data-download", "scraping"]
categories = ["command-line-utilities", "data-processing"]

[dependencies]
clap = "3.0"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
scraper = "0.12"
url = "2"
quick-xml = "0.38.4"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = "0.6"
polars = { version = "0.40", features = ["parquet"] }
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
