[package]
name = "sppd-cli"
version = "1.2.2"
edition = "2021"
description = "A command-line tool for fetching and managing data from public tenders and minor contracts in Spain"
authors = ["Alvaro Carranza <108229582+Alvaro2c@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alvaro2c/sppd-cli"
keywords = ["cli", "procurement", "spain", "public-tenders", "data-download", "scraping"]
categories = ["command-line-utilities", "data-processing"]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std", "derive"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
scraper = { version = "0.12", default-features = false }
url = { version = "2", default-features = false }
quick-xml = { version = "0.38.4", default-features = false }
regex = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "fs", "macros", "time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
polars = { version = "0.40", default-features = false, features = ["parquet", "lazy", "dtype-struct"] }
walkdir = { version = "2.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.8", default-features = false }
thiserror = { version = "1.0", default-features = false }
tempfile = { version = "3", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }

